# fomties.com

./: .cbfmt.toml  .clang-format  .gitattributes  .oxfmtrc.json  .pnpmfile.cjs  2 cor 5v7.md  25 august.md  26 august.md  404.html  AGENTS.md  Cargo.toml  Gemfile  LICENSE  README.md  _config.yml  a place to brainstorm, a place to create and a place to publish.md  aesthetic is a creative constraint.md  app idea that i have (meetwhere).md  architects vs gardeners in interpersonal relationships.md  be vanilla.md  clusters cause tension, and tension is required for resolution.md  creative constraints.md  curiosity makes the heart yearn.md  daily review routine.md  deploy.sh  drizzle.config.ts  globals.d.ts  guiding principle development.md  guiding principles.md  haircut with zack.md  help your uncle Jack off the horse or help your uncle jack off a horse.md  how this website was created.md  improve my thinking.md  index.d.ts  lesson from airbnb's origin story.md  mindset and identity sculpting.md  multiple tools, single system.md  netlify.toml  noma framework.md  note templates for templater.md  (+24 more)
.github/: README.md  dependabot.yml
.obsidian/: community-plugins.json  hotkeys.json  workspace.json
_includes/: footer.html  head.html  link-previews.html  nav.html  notes_graph.html
_layouts/: default.html  note.html  post.html  tag.html
_notes/: 2 cor 5v7.md  3-2-1 content system.md  a place to brainstorm, a place to create and a place to publish.md  a season of growth and reflection.md  aesthetic is a creative constraint.md  analogy from basketball.md  app idea that i have (meetwhere).md  architects vs gardeners in interpersonal relationships.md  be vanilla.md  buy what is best available now and you can always swap out later.md  clusters cause tension, and tension is required for resolution.md  creative constraints.md  curiosity makes the heart yearn.md  daily review routine.md  digital garden.md  fomties™.md  food coma after lunch are the worse.md  haircut with zack.md  help your uncle Jack off the horse or help your uncle jack off a horse.md  hey, i'm ryan..md  hey, i'm ryan.md  huh, so what is this.md  improve my thinking.md  lesson from airbnb's origin story.md  multiple tools, single system.md  my new digital garden.md  noma framework.md  note templates for templater.md  notemaking process to publish.md  now page.md  over explaining is better than under explaining.md  riddle of two paths.md  rule of 3 losses.md  seaweed chicken + porridge + pork belly.md  spending time in preparation to have smooth work.md  sustaining a healthy habit for a longer term instead of just forcing a habit.md  systems over templates.md  there are two types of writers, the architects and the gardeners. the architects plan everything ahead of time… the gardeners dig a hole, drop in a seed and water it.md  values and goals i live by.md  vietnamese coffee + baileys.md  (+7 more)
_pages/: about.md  changelog.md  creations.md  home.md  index.md  library.md  notes.md  now.md  press.md  ryan tham.md  subscribe.md  success.md  tags.md  test.md  topics.md  videos.md  writings.md
_plugins/: bidirectional_links_generator.rb
_posts/: 2024-06-20-cna-documentary-reflection.md  2024-10-17-a season of growth and reflection.md  2025-08-14-test-blog.md
_sass/: _code.scss  _style.scss
content/: .moxide.toml  .obsidian.vimrc  abcd.md  about.md  colophon.md  dong.canvas  index.md  now.md  spaces.md  stories.md  subscribe.md  systems.md
migrations/: 0001_flaky_anthem.sql  (+4 more)
(+866 files in other folders)
